@@ -3,6 +3,7 @@ Version 0.5
  add to obdinfo so programs can know units, max, min, etc
  obdgpslogger: Convert values returned from obd to actual numbers
  obdgpslogger: option to list supported PIDs in current OBD device
+ obd2kml: add graph of vss/rpm [roughly "gear ratio"]
 
 Version 0.4 (released 2009-04-10)
  Add obdgui
